--- a/survey.tex
+++ b/survey.tex
@@ -6,24 +6,24 @@ finding answers in unstructured (text) data.
 
 TODO more existing systems
 
-The classic QA system \textbf{OpenEphyra} \cite{Ephyra2006}
+The classic QA system \textbf{OpenEphyra} \citep{Ephyra2006}
 operates on the basis of fixed question categories with hand-crafted rules,
 and puts emphasis on querying web search engines.
-The \textbf{OAQA} initiative \cite{OAQATowards} has developed a basic QA framework,
+The \textbf{OAQA} initiative \citep{OAQATowards} has developed a basic QA framework,
 but does not provide an end-to-end pipeline and its usage of UIMA has
 in our opinion severe design limitations (see below).
-The \textbf{WatsonSim} system \cite{WatsonSim} has begun developing independently
+The \textbf{WatsonSim} system \citep{WatsonSim} has begun developing independently
 during the course of our own work and it works on Jeopardy! statements rather
 than questions.
 
-\textbf{Jacana} \cite{TreeEdit2013Yao} \cite{TreeEditIR2013Yao}
+\textbf{Jacana} \citep{TreeEdit2013Yao} \citep{TreeEditIR2013Yao}
 is a promising set of loosely coupled QA-related methods
 and algorithms, focused on machine learning of textual entailment.  It is
 not meant to be a full QA framework and using it as an end-to-end pipeline
 is not straightforward, but integration of the Jacana implementation as
 modules in YodaQA is our long-term plan.
 
-\textbf{OpenQA} \cite{OpenQA} is a recently introduced end-to-end QA pipeline platform
+\textbf{OpenQA} \citep{OpenQA} is a recently introduced end-to-end QA pipeline platform
 also developed independently during the course of our work, and shares our
 goal of a common research platform in the field.  However, the approach
 is very different, as OpenQA is more of a portfolio-style engine with
@@ -39,47 +39,47 @@ Benchmark:  WebQuestions (pre-determined splits), TREC (various years, curated v
 
 Measure: Precision, p@1, recall, F1
 
-Bordes et al. \cite{Semantic2014Bordes} sums up:
+Bordes et al. \citep{Semantic2014Bordes} sums up:
 \textit{%
 The state-of-the-art techniques in open QA can be classified into two main
 classes, namely, information retrieval based and semantic parsing based. Information
 retrieval systems first retrieve a broad set of candidate answers by querying
 the search API of KBs with a transformation of the question into a valid
 query and then use fine-grained detection heuristics to identify the exact answer
-(Kolomiyets survey 2011, Unger et al. 2012 templates, \cite{TreeFreebase2014Yao}).
+(Kolomiyets survey 2011, Unger et al. 2012 templates, \citep{TreeFreebase2014Yao}).
 On the other hand, semantic parsing methods focus on the correct
 interpretation of the meaning of a question by a semantic parsing system. A
 correct interpretation converts a question into the exact database query that
-returns the correct answer. Interestingly, recent works \cite{Semantic2013Berant} \cite{SPBerant2014Paraphrase} \cite{OQA} have shown that
+returns the correct answer. Interestingly, recent works \citep{Semantic2013Berant} \citep{SPBerant2014Paraphrase} \citep{OQA} have shown that
 such systems can be efficiently trained under indirect and imperfect supervision
 and hence scale to large-scale regimes, while bypassing most of the annotation
 costs.}
 
-These two approaches (IE vs. SP) have been further compared in \cite{FreebaseQA2014Yao}
+These two approaches (IE vs. SP) have been further compared in \citep{FreebaseQA2014Yao}
 and seem roughly comparable.
 
 \subsection{IE For Structued Data}
 
-\textbf{Information Extraction over Structured Data: Question Answering with Freebase (Jacana Freebase)} \cite{TreeFreebase2014Yao}
+\textbf{Information Extraction over Structured Data: Question Answering with Freebase (Jacana Freebase)} \citep{TreeFreebase2014Yao}
 	--- TODO.
 		Open source.
 
-\textbf{Lean Question Answering over Freebase from Scratch (kitt.ai)} \cite{LeanFreebaseYao}
+\textbf{Lean Question Answering over Freebase from Scratch (kitt.ai)} \citep{LeanFreebaseYao}
 	--- simple fuzzy string matching to identify Freebase concepts,
 		bag-of-words logistic regression to identify relations.
 		WebQuestions F1 Berant 44.3\%, F1 Yao 53.5\%.
 
 \subsection{SP For Structured Data}
 
-\textbf{Open Question Answering Over Curated and Extracted Knowledge Bases (OQA)} \cite{OQA}
+\textbf{Open Question Answering Over Curated and Extracted Knowledge Bases (OQA)} \citep{OQA}
 	--- paraphrase (mined operators) $\to$ parse (templates) $\to$ rewrite (mined operators) $\to$ execute (ensemble of KBs).
 	Novel machine learning for inference and answer scoring with hidden variables.
 	Datasets public, open source.
 	WebQuestions F1 35\%, TREC F1 29\%, WikiAnswers F1 8\%.
 
-\textbf{(Paralex)} \cite{Fader2013Paraphrase}
+\textbf{(Paralex)} \citep{Fader2013Paraphrase}
 
-\textbf{(SEMPRE)} \cite{SPBerant2014Paraphrase}
+\textbf{(SEMPRE)} \citep{SPBerant2014Paraphrase}
 
 \section{Unstructured Data QA}
 
@@ -96,9 +96,9 @@ Binary classification or ranking problem.
 TODO TREC-based dataset by Wang et al.
 MAP and MRR reported.
 
-\textbf{(Jacana)} \cite{TreeEdit2013Yao}
+\textbf{(Jacana)} \citep{TreeEdit2013Yao}
 
-\textbf{Deep Learning for Answer Sentence Selection} \cite{Yu2014Deep}
+\textbf{Deep Learning for Answer Sentence Selection} \citep{Yu2014Deep}
 	--- given vector embeddings $\mathbf{q}, \mathbf{a}$, estimate
 	$P(rel|q,a) = \sigma(\mathbf{q}^T \mathbf{M}\, \mathbf{a} + b)$
 	i.e.\ train a model with parameters $\mathbf{M}, b$ that
@@ -119,13 +119,13 @@ MAP and MRR reported.
 
 TREC benchmark.  Curated TREC.  WebQuestions also possible(?).
 
-\textbf{(DeepQA IBM Watson)} \cite{WatsonOverview}
+\textbf{(DeepQA IBM Watson)} \citep{WatsonOverview}
 
-\textbf{(Jacana)} \cite{TreeEdit2013Yao} \cite{TreeEditIR2013Yao}
+\textbf{(Jacana)} \citep{TreeEdit2013Yao} \citep{TreeEditIR2013Yao}
 
 \textbf{Web-based Question Answering: Revisiting AskMSR (AskMSR+)}
 
-\textbf{Open Domain Question Answering via Semantic Enrichment (QuASE)} \cite{QuASE}
+\textbf{Open Domain Question Answering via Semantic Enrichment (QuASE)} \citep{QuASE}
 	--- web-based QA system that links snippet pieces to Freebase entities
 	\textit{(entity linking)} to generate extra features for answers.
 	One feature is the cosine similarity of word
@@ -138,7 +138,7 @@ TREC benchmark.  Curated TREC.  WebQuestions also possible(?).
 	improvement was 3.5\%.  (Absolute numbers not comparable due to
 	sub-sampling and re-evaluation.)
 
-\textbf{YodaQA: A Modular Question Answering System Pipeline} \cite{YodaQAPoster2015}
+\textbf{YodaQA: A Modular Question Answering System Pipeline} \citep{YodaQAPoster2015}
 
 \textbf{MemNets} though I still think it's a toy task in QA context.
 
@@ -156,21 +156,21 @@ learned rather than hardcoded, as was common in the early systems).
 One approach is to classify an answer to a fixed set of categories.
 A two-level (coarse, fine) taxonomy based on the TREC set of questions and a labelled dataset%
 \footnote{\url{http://cogcomp.cs.illinois.edu/Data/QA/QC/}}
-was introduced by \textbf{Learning question classifiers} \cite{QCLearning}.
+was introduced by \textbf{Learning question classifiers} \citep{QCLearning}.
 They set a baseline of coarse $P_1=91.0\%$, fine $P_1=84.2\%$.
 
 This sentence classification problem has been one of the standard benchmarks
 for semantic NLP tasks:
 \begin{itemize}
 	\item SVM$_S$ (Silva et al., 2011) TODO coarse $P_1=95.0\%$
-	\item DCNN \cite{QtcDCNN} TODO coarse $P_1=93.0\%$
-	\item CNN \cite{CNNSentClass} coarse $P_1=93.6\%$
-	\item Skip-Thought Vectors \cite{SkipThought} coarse $P_1=92.2\%$ (but unsupervised)
-	\item Self-Adaptive Hierarchical Sentence Model \cite{AdaSent} (AdaSent) coarse $P_1=92.6\%$
-	\item TODO more papers; \cite{AdaSent} has some references; separate embedding and classical?, supervised and unsupervised; even primitive baseline is something like $85\%$
+	\item DCNN \citep{QtcDCNN} TODO coarse $P_1=93.0\%$
+	\item CNN \citep{CNNSentClass} coarse $P_1=93.6\%$
+	\item Skip-Thought Vectors \citep{SkipThought} coarse $P_1=92.2\%$ (but unsupervised)
+	\item Self-Adaptive Hierarchical Sentence Model \citep{AdaSent} (AdaSent) coarse $P_1=92.6\%$
+	\item TODO more papers; \citep{AdaSent} has some references; separate embedding and classical?, supervised and unsupervised; even primitive baseline is something like $85\%$
 \end{itemize}
 
-A different approach that was introduced by IBM Watson DeepQA \cite{WatsonTyCor}
+A different approach that was introduced by IBM Watson DeepQA \citep{WatsonTyCor}
 associates the question with a Lexical Answer Type (LAT) which is
 an arbitrary English word that would describe the answer concept
 (e.g. ``inventor'' or ``length'').
@@ -198,21 +198,21 @@ to find out a description of \textit{plumber} without using these
 words, while ``What is the capital of Christians?'' may seek the
 paraphrase of \textit{capital of Christians}, aside of database lookups.
 
-\textbf{Learning to Understand Phrases by Embedding the Dictionary (DefGen)} \cite{DefGen}
+\textbf{Learning to Understand Phrases by Embedding the Dictionary (DefGen)} \citep{DefGen}
 	--- reverse dictionary and QA on crossword puzzles using word2vec
 	with composing via RNN or an averaging baseline, embeddings of
 	concepts are pre-trained from wikipedia intros and wordnet definitions.
 
 \subsection{Cloze-style Questions}
 
-In the Cloze procedure scenario \cite{Cloze},
+In the Cloze procedure scenario \citep{Cloze},
 we consider a $(context, query)$ pair where the query
 sentence is entailed by the context, but a single entity name in the query
 is missing (e.g.\ in a context detailing an incident of the well-known personality
 \textit{Jeremy Clarkson}, we are to find $X$ for the query
 \textit{Producer X will not press charges against Jeremy Clarkson, his lawyer says.}).
 
-\textbf{Teaching Machines to Read and Comprehend} \cite{ReadAndComprehend}
+\textbf{Teaching Machines to Read and Comprehend} \citep{ReadAndComprehend}
 	--- an attention-based model that produces vector embeddings of $(document, query)$
 	pairs and uses a weight matrix to judge probability of a particular
 	word being the answer based on the composite pair embedding;
@@ -224,9 +224,9 @@ is missing (e.g.\ in a context detailing an incident of the well-known personali
 
 Full-scale end-to-end systems combining structured and unstructured approaches.
 
-\textbf{(DeepQA IBM Watson)} \cite{WatsonOverview}
+\textbf{(DeepQA IBM Watson)} \citep{WatsonOverview}
 
-\textbf{YodaQA: A Modular Question Answering System Pipeline} \cite{YodaQAPoster2015}
+\textbf{YodaQA: A Modular Question Answering System Pipeline} \citep{YodaQAPoster2015}
 
 \section{Non-Factoid QA}
 
@@ -268,7 +268,7 @@ or databases available.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=10cm]{kingqueen.png}
-	\caption{Semantic relationships between words as arrows in the vector space. \cite{WordVecLingReg}}
+	\caption{Semantic relationships between words as arrows in the vector space. \citep{WordVecLingReg}}
 	\label{fig:w2vg}
 \end{figure}
 
@@ -278,7 +278,7 @@ or databases available.
 	\caption{Semantic relationships between superlative adjectives as represented in the vector space.
 		This is a 2D projection of the high-dimensional space that is designed to well preserve relative positions of the shown entities
 		(so-called t-SNE 2D).
-		\cite{Glove}}
+		\citep{Glove}}
 	\label{fig:w2ver}
 \end{figure}
 
@@ -287,7 +287,7 @@ or databases available.
 	\includegraphics[width=11cm]{capitals.png}
 	\caption{Mappings between countries and capitals, acquired entirely from the typical context of the respective words.
 	This is again a 2D projection of the high-dimensional space, this time obtained by a PCA dimensionality reduction technique.
-	\cite{DistReprComp}}
+	\citep{DistReprComp}}
 	\label{fig:w2vc}
 \end{figure}
 
