odbstud: Add Bibliography to toc

--- a/odbstud.tex
+++ b/odbstud.tex
@@ -6,6 +6,7 @@
 \usepackage{url}
 \usepackage{hyperref}
 \usepackage[round]{natbib}
+\usepackage[nottoc,notlot,notlof]{tocbibind}
 
 % natbib link joining; somewhat breaks \cite, \citet
 \makeatletter
